# travel_reimbursement_approval_agent

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  api.py  checkpoint.py  config.py  decision.py  graph.py  llm.py  mcp_server.py  models.py  receipts.py  runner.py  tools.py  tracing.py
backend/config/: policy.yaml
backend/data/: policy.md  prior_claims.json
backend/data/claims/: 01_approve.json  02_partial.json  03_reject.json  04_manual_review.json
backend/data/golden/: 01_approve.json  02_partial.json  03_reject.json  04_manual_review.json
backend/docker/: init-db.sql
backend/outputs/: 01_approve.decision.json  02_partial.decision.json  03_reject.decision.json  04_manual_review.decision.json  hitl_demo.json
backend/tests/: conftest.py  eval_judge.py  factories.py  test_api.py  test_decision.py  test_eval.py  test_graph.py  test_mcp.py  test_receipts.py  test_receipts_api.py  test_tools.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx  routes.ts
frontend/src/app/components/: AppShell.tsx  ClaimsList.tsx  DecisionDetail.tsx  HitlPanel.tsx  OutcomeBadge.tsx  ReasoningTrace.tsx  SubmitClaim.tsx
frontend/src/app/components/ui/: button.tsx
frontend/src/imports/pasted_text/: reviewer-console.md
frontend/src/styles/: board.css  fonts.css  index.css  theme.css
