[project]
name = "travel-reimbursement-approval-agent"
version = "0.1.0"
description = "Agentic travel reimbursement approval agent (gpt-oss-120b on Azure AI Foundry) with a deterministic policy + guardrail core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "langgraph==1.2.6",
    "langgraph-checkpoint-postgres==3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "langchain>=1.0.8,<2",
    "langchain-core>=1.0,<2",
    "langchain-openai==1.3.3",
    "langchain-mcp-adapters==0.3.0",
    "mcp[cli]>=1.9.2,<2",
    "langfuse>=2,<3",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "deepeval==4.0.7",
    "instructor>=1.15.4",
]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
